feat: Introduce CourseProgram management with DTOs, repository, and entities
Added DTOs (`CourseProgramResponse`, `CourseProgramTimingDTO`, `CourseProgramTopicDTO`) and corresponding entity models (`CourseProgramTiming`, `CourseProgramTopic`, `TeachingReport`) for course program management. Implemented `CourseProgramTimingRepository` for data persistence. Enhanced service logic and updated test data to align with the new structure.